# enrichment-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
CytoscapeConfiguration/: cytoscape3.props  layout.yfiles.HierarchicLayout.props  mapSourceAndTarget.props
CytoscapeConfiguration/app-data/com.yworks.cytoscape.contrib.yfiles-layout-algorithms/: yfiles-bundle.properties  yfiles-statistics.xml
CytoscapeConfiguration/images3/: image_metadata.props
Cytoscape_v3.10.1/: Cytoscape.vmoptions
Cytoscape_v3.10.1/.install4j/: i4jparams.conf  install.prop  install4j_1vdhqm2-Cytoscape.desktop  response.varfile
Cytoscape_v3.10.1/framework/instances/: instance.properties
db/: c2.cp.kegg+wp.v2023.2.Hs.symbols.gmt  id_conversion.txt  phonemesKSN.csv  phonemesPKN.csv  phonemes_PKN_KSN.csv  psp_kinase_substrate_adjacency_matrix.csv
db/kinase_library/: Motif_Odds_Ratios.txt
db/scripts/: create_phonemes_pkn_ksn.py  update_ksea_es_db.py
fixtures/kea3/expected_output/: output.json
fixtures/kea3/input/: input.json  kea3_result.json
fixtures/ksea/expected_output/: output_ksea.json  output_ksea_rokai.json
fixtures/ksea/input/: input.json
fixtures/kstar/expected_output/: output.json
fixtures/kstar/input/: input.json
fixtures/motif_enrichment/expected_output/: output.json
fixtures/motif_enrichment/input/: input.json
fixtures/phonemes/expected_output/: Afatinib.csv  Experiment01.cx  Experiment01.json  (+1 more)
flask_server/: .renvignore  enrichment_server.py  gunicorn.sh  ksea.py  motif_enrichment.py  phonemes.py  pyproject.toml  run_phonemes.R  run_rokai.R  ssgsea.py
flask_server/modules/k_star/: k_star.py
flask_server/modules/kea3/: kea3.py
flask_server/modules/ksea/: ksea.py  run_rokai.R
flask_server/modules/motif_enrichment/: motif_enrichment.py
flask_server/modules/phonemes/: phonemes.py  run_phonemes.R
flask_server/modules/ssgsea/: ssgsea.py
flask_server/tests/: test_integration.py
(+30 files in other folders)
