[tool.poetry]
name = "enrichment_server"
version = "0.1.0"
description = ""
authors = ["Julian Müller <julian2.mueller@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
werkzeug = "2.0.3"
flask = "2.0.3"
pandas = "2.1.0"
numpy = "^1.26.4"
cmappy = "^4.0.1"
kinact = { git = "https://github.com/saezlab/kinact.git" }
py4cytoscape = "^1.9.0"
kstar = "^0.5.3"
tqdm = "^4.66.5"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
psite-annotation = "^0.5.0"
#pypath-omnipath = "^0.16.5" #You might have to install libpython3.10-dev to get this working
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
